--- a/mapArea/lehestik.html
+++ b/mapArea/lehestik.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Map area kasutamine</title>
+    <link rel="stylesheet" href="mapStyle.css">
 </head>
 <body>
-<h1> Map \ Area kasutamine</h1>
+<header><h1> Map \ Area kasutamine</h1>
+
+
+
+</header>
 <img src="maja.png" alt="maja" usemap="#majake"> 
 <map name="majake">
     <!--ring coord= x, y -keskpunkt, R-raadius-->
@@ -19,9 +24,22 @@
     <area shape="rect" coords="216,45,249,114" href="toru.html" alt="toru">
     <area shape="rect" coords="323,301,351,240" href="puuTuvi.html" alt="puu tuvi">
     <area shape="circle" coords="335,188,77" href="lehestik.html" alt="lehestik">
+    <area shape="circle" coords="66,48,62" href="pilv.hmtl" alt="pilv">
+    <area shape="circle" coords="332,41,32" href="paike.hmtl" alt="paike">
+    <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
+  
 </map>
-<div>See on lehestik
+<div>Samal ajal kui arenevad esimese järgu juured, arenevad mullas kolm alumist klorofüllita lehte. Neid nimetatakse alalehtedes. Neljas leht väljub mullast ja säilib kogu suve. Pärast asendusmugulsibula väljakujunemist alalehed kuivavad ja katavad teda kuiva soomusena.
+
+    Asendusmugulsibulast väljuvad uued lehed, mida nimetatakse kattelehtedeks, mõnikord ka mugulsibula lehtedeks. Neil on tüüpiline mõõga kuju ja sordipetsiifiline värvus heledast kuni sinakasroheliseni. Nad on tugevad ja kaetud vahakihiga. Lehtede pikkus on 30-140 cm, laius aga 2-8,5 cm. Neid on tavaliselt 4-5, mis oleneb sordist. Juveniilsetest mugulsibulatest arenenud taimedel on lehti rohkem, 6-9. Need lehed moodustavad peamise fotosünteesivate lehtede massi ja nende ülesanne on varustada taime, hiljem asendusmugulsibulat ja tipikuid toitainetega. Pärast lehtede pikkuskasvu lõppu, nad laienevad ja suurendavad nii fotosünsteesivat pinda. Kehtib seaduspärasus - iga järgnev leht on eelmisest suurem.
+
+    Kattelehtede kaenaldes moodustavad järgmiseks aastaks uued univad pungad. Neid võib sügisel pärast lehtede eemaldamist kergesti kindlaks teha, lehtede kinnituskohas mugulsibulal on näha kontsentrilised ringid. Kattelehtede moodustumise lõppedes ilmub 3-4, harva 5 pärislehte, mis asuvad varre alusel ja mida võib nimetada varrelehtedeks. Nende alumine osa on torujas, vart ümbritsev. Mõõtmetelt on nad väiksemad kui alumisted mugulsibula lehted. Iga järgnev leht on eelmisest väiksem. Neist igaühe kaenlas asuvad õisikualgmed, millistest reeglina areneb välja ainult üks, viimane. Halbades kasvutingimustes (kõikuv temperatuur) võib mõni külgmine siiski areneda õisikuks, kuid ta jääb lühikeseks. 0_0
+
 
 </div>
+<footer>
+    <strong>Artjom Pasko &copy; 2025</strong>
+
+</footer>
 </body>
 </html>
