--- a/mapArea/paike.html
+++ b/mapArea/paike.html
@@ -29,7 +29,7 @@
     <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
   
 </map>
-<div>Katus on ehitise ülemine osa, mis koosneb eri materjalidest ja konstruktsioonilistest elementidest ning toetub ehitise seintele ja tugedele. Katuse peamine ülesanne on kaitsta ehitist vihma, lume, päikse, temperatuuri ja tuule eest.:D
+<div>Päike on heledaim Maalt nähtav täht, Päikesesüsteemi keskne keha. Kui jutt on mõnest teisest planeedisüsteemist, siis võib üldnimetusena päikeseks nimetada ka selle teise planeedisüsteemi tähte (või tähti).
 
 
 </div>
