--- a/mapArea/puuTuvi.html
+++ b/mapArea/puuTuvi.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Map area kasutamine</title>
+    <link rel="stylesheet" href="mapStyle.css">
 </head>
 <body>
-<h1> Map \ Area kasutamine</h1>
+<header><h1> Map \ Area kasutamine</h1>
+
+
+
+</header>
 <img src="maja.png" alt="maja" usemap="#majake"> 
 <map name="majake">
     <!--ring coord= x, y -keskpunkt, R-raadius-->
@@ -19,10 +24,18 @@
     <area shape="rect" coords="216,45,249,114" href="toru.html" alt="toru">
     <area shape="rect" coords="323,301,351,240" href="puuTuvi.html" alt="puu tuvi">
     <area shape="circle" coords="335,188,77" href="lehestik.html" alt="lehestik">
+    <area shape="circle" coords="66,48,62" href="pilv.html" alt="pilv">
+    <area shape="circle" coords="332,41,32" href="paike.html" alt="paike">
+    <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
+  
 </map>
-<div>See on Puu Tuvi
+<div>Tüvi (ladina keeles truncus) on puu varre harunemata osa. Aianduses loetakse tüveks varre maapinnast kuni alumise suure külgoksani ulatuvat osa. Tüvi on puude üks tähtsamaid struktuure, sest sealt harunevad oksad ja nendest omakorda teised taime maapealsed osad, mis moodustavad võra. Tüvi kinnitub maapinda juurte abil. WOW
 
 
 </div>
+<footer>
+    <strong>Artjom Pasko &copy; 2025</strong>
+
+</footer>
 </body>
 </html>
