--- a/mapArea/taevas.html
+++ b/mapArea/taevas.html
@@ -29,7 +29,7 @@
     <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
   
 </map>
-<div>Katus on ehitise ülemine osa, mis koosneb eri materjalidest ja konstruktsioonilistest elementidest ning toetub ehitise seintele ja tugedele. Katuse peamine ülesanne on kaitsta ehitist vihma, lume, päikse, temperatuuri ja tuule eest.:D
+<div>Taevakeha on kosmoses asuv astronoomia poolt uuritav keha. Taevakehad on kõik objektid, mida me Maa pealt taevasse vaadates näeme. Enamik neist on looduslikud taevakehad, aga on olemas ka mittelooduslikud taevakehad, näiteks satelliidid. o-0
 
 
 </div>
