--- a/mapArea/pilv.html
+++ b/mapArea/pilv.html
@@ -29,7 +29,7 @@
     <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
   
 </map>
-<div>Katus on ehitise ülemine osa, mis koosneb eri materjalidest ja konstruktsioonilistest elementidest ning toetub ehitise seintele ja tugedele. Katuse peamine ülesanne on kaitsta ehitist vihma, lume, päikse, temperatuuri ja tuule eest.:D
+<div>Pilv on atmosfääris veeauru kondenseerumisel tekkinud hõljuvate väga väikeste veetilkade (udu) või jääkristallide nähtav kogum. :D
 
 
 </div>
