--- a/mapArea/toru.html
+++ b/mapArea/toru.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Map area kasutamine</title>
+    <link rel="stylesheet" href="mapStyle.css">
 </head>
 <body>
-<h1> Map \ Area kasutamine</h1>
+<header><h1> Map \ Area kasutamine</h1>
+
+
+
+</header>
 <img src="maja.png" alt="maja" usemap="#majake"> 
 <map name="majake">
     <!--ring coord= x, y -keskpunkt, R-raadius-->
@@ -19,10 +24,18 @@
     <area shape="rect" coords="216,45,249,114" href="toru.html" alt="toru">
     <area shape="rect" coords="323,301,351,240" href="puuTuvi.html" alt="puu tuvi">
     <area shape="circle" coords="335,188,77" href="lehestik.html" alt="lehestik">
+    <area shape="circle" coords="66,48,62" href="pilv.html" alt="pilv">
+    <area shape="circle" coords="332,41,32" href="paike.html" alt="paike">
+    <area shape="rect" coords="1,1,376,308" href="taevas.html" alt="taevas">
+  
 </map>
-<div>See on toru
+<div>See on toru, see teeb suitsu
 
 
 </div>
+<footer>
+    <strong>Artjom Pasko &copy; 2025</strong>
+
+</footer>
 </body>
 </html>
